# gtk-vector-screenshot

./: .gitignore  52load-gtk-vector-screenshot-gtk-module  ChangeLog  Makefile  Makefile.am  README  configure.ac  gtk-vector-screenshot.c  module.c  take-vector-screenshot.c  take-vector-screenshot.desktop
debian/: changelog  control  copyright  gtk-vector-screenshot.install  rules  watch
dummy-module/: Makefile.am  dummy-module.c
